crates/wac-parser/tests/resolution/fail/export-duplicate-name.wac
package test:comp;

import f: func();
export f with "x";
export f with "x";
